# ResumeAscend

./: .gitignore  Architecture.md  FEATURES.md  README.md  app.py  config.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml
core/: error_handler.py  session_manager.py
pages/: 1_Editor.py
ui/: __init__.py  theme.py
utils/: __init__.py  ats_analyzer.py  document_exporter.py  groq_analyzer.py  rag_qa.py  text_extractor.py  visualizations.py
